--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -1,12 +1,47 @@
 {{!-- This is the base layout for your project, and will be used on every page. --}}
+<!doctype html>
+<html class="no-js" lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="mixfuckedup, bizarrock, musica, music, multimedia, livecoding,
+  algorave, algoraving, tiniebla, coagula, josecaos, livecodenet ensamble, livecodenet">
+  <meta name="description" content="Mixfuckedup es un Laboratorio personal de proyectos dedicados al codigo y multimedia, especializado en sonido. Musica, Sintesis sonora, produccion y postproduccion, desarrollo de aplicaciones, web, mapping" >
+  <meta name="author" content="@joseCao5" >
+  <meta name="viewport" content="width=100%; initial-scale=1;" />
+  <title><?php echo $titulo[$secc]; ?></title>
+  <link rel="icon" type="image/ico" href="assets/img/favicon.ico" >
+  <!--styles-->
+  <link rel="stylesheet" href="assets/css/app.css">
 
+  <!-- Analytics -->
+  <script>
+  // (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  // 	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  // 	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  // })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  // ga('create', 'UA-73497101-1', 'auto');
+  // ga('send', 'pageview');
+  </script>
+</head>
 
-
-  <?php include_once "php/mixheader.php" ?>
+<body>
 
 
   {{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is created. --}}
   {{> body}}
 
-
-  <?php include_once "php/mixfooter.php" ?>
+  <script>
+  var secc = <?php echo $secc ?>;
+  </script>
+  <script src="assets/js/app.js"></script>
+  <!-- <script type="text/javascript" src="js/jquery.udraggable.js"></script>
+  <script type="text/javascript" src="js/jquery.event.ue.js"></script>
+  <script type="text/javascript" src="js/speak/speakClient.js"></script>
+  <script type="text/javascript" src="bower_components/paper/dist/paper-full.js"></script>
+  <script type="text/paperscript" src="js/papel.js" canvas="lienzo"></script>
+  <script type="text/javascript" src="js/mixspeakedup.js"></script>
+  <script type="text/javascript" src="js/mixfuckedup.js"></script> -->
+</body>
+</html>
