--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -34,11 +34,12 @@
 
   <script>
   var secc = <?php echo $secc ?>;
-  </script>
+  </script> 
   <script src="assets/js/app.js"></script>
-  <script src="assets/speak/speakClient.js"></script>
-  <script src="assets/scripts/paper-papel.js"></script>
   <script src="assets/scripts/js_utils.js"></script>
+  <script type="text/paperscript" src="assets/scripts/paper-full.js"></script>
+  <script src="assets/speak/speakClient.js"></script>
+  <script src="assets/scripts/papel.js" type="text/paperscript"></script>
   <script src="assets/scripts/mixspeakedup.js"></script>
   <script src="assets/scripts/mixfuckedup.js"></script>
 
