--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="keywords" content="mixfuckedup, bizarrock, musica, music, multimedia, livecoding,
+  <meta name="keywords" content="mixfuckedup, bizarock, musica, music, multimedia, livecoding,
   algorave, algoraving, tiniebla, coagula, josecaos, livecodenet ensamble, livecodenet">
   <meta name="description" content="Mixfuckedup es un Laboratorio personal de proyectos dedicados al codigo y multimedia, especializado en sonido. Musica, Sintesis sonora, produccion y postproduccion, desarrollo de aplicaciones, web, mapping" >
   <meta name="author" content="@joseCao5" >
@@ -34,10 +34,10 @@
 
   <script>
   var secc = <?php echo $secc ?>;
-  </script> 
+  </script>
   <script src="assets/js/app.js"></script>
   <script src="assets/scripts/js_utils.js"></script>
-  <script type="text/paperscript" src="assets/scripts/paper-full.js"></script>
+  <script type="text/javascript" src="assets/scripts/paper-full.min.js"></script>
   <script src="assets/speak/speakClient.js"></script>
   <script src="assets/scripts/papel.js" type="text/paperscript"></script>
   <script src="assets/scripts/mixspeakedup.js"></script>
