header + footer integrados a foundation + comienzo movil

--- a/src/assets/scss/_mixresponsiveup.scss
+++ b/src/assets/scss/_mixresponsiveup.scss
@@ -1,31 +1,33 @@
 /**/
-@media (max-width:1024px) {
+// large
+@media (max-width:1440px) {
 /**/
-    .menuProyectos li {
-        width: 16.40%;
-    }
-    .menuProyectos li a {
-        font-size: 1.4em;
-    }
+    // .menuProyectos li {
+    //     width: 16.40%;
+    // }
+    // .menuProyectos li a {
+    //     font-size: 1.4em;
+    // }
 }
+// /**/
+// .hablaWidget {
+//     font-size: 1.2em;
+// }
+@media (max-width:960px) {
 /**/
-.hablaWidget {
-    font-size: 1.2em;
-}
-@media (max-width:720px) {
+//     .menuProyectos li {
+//         width: 16.20%;
+//     }
+//     .menuProyectos li a {
+//         font-size: 1.2em;
+//     }
+// }
 /**/
-    .menuProyectos li {
-        width: 16.20%;
-    }
-    .menuProyectos li a {
-        font-size: 1.2em;
-    }    
-}
-/**/
-.hablaWidget {
-    font-size: 1em;
-}
-@media (max-width:480px) {
+// .hablaWidget {
+//     font-size: 1em;
+// }
+// small
+@media (max-width:640px) {
 /**/
     .menuProyectos li {
         width: 16.10%;
@@ -34,11 +36,12 @@
         font-size: 0.9em;
     }
 /**/
-.hablaWidget {
-    font-size: 1em;
-}    
+// .hablaWidget {
+//     font-size: 1em;
+// }
 }
-@media (max-width:320px) { 
+//xsmall
+@media (max-width:320px) {
 /**/
     .menuProyectos li {
         width: 16.0%;
@@ -47,26 +50,7 @@
         font-size: 0.8em;
     }
 /**/
-.hablaWidget {
-    font-size: 0.8em;
-}    
-}
-/*music player*/
-@media (-webkit-min-device-pixel-ratio: 1.5), (min--moz-device-pixel-ratio: 1.5), (-o-min-device-pixel-ratio: 3/2), (min-resolution: 1.5dppx)  {
-	.ubaplayer-button {
-		background-position: 0px -70px;
-		background-size: 20px 250px;
-	}
-
-	.ubaplayer-button:hover {
-		background-position: 0 -107px;
-	}
-
-	.ubaplayer-button.playing {
-		background-position: 0 -144px;
-	}
-
-	.ubaplayer-button.playing:hover {
-		background-position: 0 -180px;
-	}
+// .hablaWidget {
+//     font-size: 0.8em;
+// }
 }
