footer + footer responsivo listo

--- a/src/assets/scss/_mixresponsiveup.scss
+++ b/src/assets/scss/_mixresponsiveup.scss
@@ -1,56 +1,54 @@
 /**/
 // large
 @media (max-width:1440px) {
-/**/
-    // .menuProyectos li {
-    //     width: 16.40%;
-    // }
-    // .menuProyectos li a {
-    //     font-size: 1.4em;
-    // }
+  /**/
+  // .menuProyectos li {
+  //     width: 16.40%;
+  // }
+  // .menuProyectos li a {
+  //     font-size: 1.4em;
+  // }
 }
 // /**/
 // .hablaWidget {
 //     font-size: 1.2em;
 // }
-@media (max-width:960px) {
-/**/
-//     .menuProyectos li {
-//         width: 16.20%;
-//     }
-//     .menuProyectos li a {
-//         font-size: 1.2em;
-//     }
-// }
+@media (max-width:1024px) {
+  /**/
+  //     .menuProyectos li {
+  //         width: 16.20%;
+  //     }
+  //     .menuProyectos li a {
+  //         font-size: 1.2em;
+  //     }
+}
 /**/
 // .hablaWidget {
 //     font-size: 1em;
 // }
 // small
 @media (max-width:640px) {
-/**/
-    .menuProyectos li {
-        width: 16.10%;
-    }
-    .menuProyectos li a {
-        font-size: 0.9em;
-    }
-/**/
-// .hablaWidget {
-//     font-size: 1em;
-// }
+  /**/
+  .mixfooter {
+
+    height: auto;
+
+  }
+  .copyright h5 {
+    text-align: left;
+  }
 }
 //xsmall
 @media (max-width:320px) {
-/**/
-    .menuProyectos li {
-        width: 16.0%;
-    }
-    .menuProyectos li a {
-        font-size: 0.8em;
-    }
-/**/
-// .hablaWidget {
-//     font-size: 0.8em;
-// }
+  /**/
+  // .menuProyectos li {
+  //     width: 16.0%;
+  // }
+  // .menuProyectos li a {
+  //     font-size: 0.8em;
+  // }
+  /**/
+  // .hablaWidget {
+  //     font-size: 0.8em;
+  // }
 }
