--- a/src/assets/scss/_mixfuckedup.scss
+++ b/src/assets/scss/_mixfuckedup.scss
@@ -416,10 +416,15 @@ p { line-height: 1.333em;
 .donaciones:hover {
 	color: lime;
 }
+.wallet-number {
+
+	font-family: monospace, serif !important;
+
+}
 .donaciones {
 	// width: 70px;
 	cursor: pointer;
-	letter-spacing: 1px;
+	letter-spacing: 2px;
 	// display: inline-block;
 	color: #F5F5F5;
 	// position: absolute;
