--- a/src/assets/scss/_mixfuckedup.scss
+++ b/src/assets/scss/_mixfuckedup.scss
@@ -75,6 +75,30 @@ ul {
 	padding: 0;
 }
 
+.black {
+	color: black;
+}
+
+.white {
+	color: whitesmoke;
+}
+
+.verde-lima {
+	color: lime;
+}
+// .blanco-hover {
+
+.verde-lima:hover {
+	color: whitesmoke;
+}
+.verde-lima:focus {
+	color: lightgray;
+}
+
+.pointer {
+	cursor: pointer;
+}
+// }
 // .fondo {
 //     height: 100%;
 //     position:fixed;
@@ -189,33 +213,40 @@ ul {
 	line-height: 2.9;
 	width: 100%;
 }
+.tituloheader-movil {
+
+}
 .tituloheader {
-	color: #FFF;
-	position: absolute;
+	// color: #FFF;
+	// position: absolute;
 	background: rgba(0,0,0,0.7);
 	border-radius: 2px;
 	/*float: right;*/
-	font-family: 'heavy_dataregular', Helvetica, Sans;
-	font-size: 1.75em;
+	// font-size: 1.75em;
 	height:auto;
 	width: auto;
-	padding-left: 5px;
-	padding-right: 5px;
+	padding: 0px 7px;
 	right:1%;
-	text-align: center;
+	// text-align: center;
 	text-decoration: none;
 	user-select: none;
 	/*line-height:0.1;*/
-	z-index: 20;
+	// z-index: 20;
 }
 .mixlogoheader {
 	line-height: 48px;
 	cursor: grab;
 	height: auto;
 	width: auto;
-	margin-bottom: 0;
-	margin-left: 10px;
-	margin-right: 10px;
+	font-family: 'heavy_dataregular', Helvetica;
+	// margin-bottom: 0;
+	// margin-left: 10px;
+	// margin-right: 10px;
+}
+.mixlogoheader-movil {
+	line-height: 0px;
+	cursor: grab;
+	font-family: 'heavy_dataregular', Helvetica;
 }
 .mixlogoheader:focus {
 	cursor: move;
@@ -470,6 +501,9 @@ p { line-height: 1.333em;
 .linkRedes li i:hover {
 	color: lime;
 }
+textarea {
+	height: 100% !important;
+}
 .hablaWidget {
 	background: gray !important;
 	border: none !important;
@@ -480,10 +514,11 @@ p { line-height: 1.333em;
 	// padding-left: 7px !important;
 	// height: 85%;
 	// width: 90%;
+	min-height: 25px;
 }
 .hablaWidget:focus {
-	background: rgba(0,255,0,0.4);
-	border-radius: 5px;
+	background-color: rgba(0,255,0,0.4);
+	border-radius: 3px;
 }
 .linkProyectos {
 	cursor: pointer;
