--- a/src/assets/scss/_mixfuckedup.scss
+++ b/src/assets/scss/_mixfuckedup.scss
@@ -86,6 +86,12 @@ ul {
 .verde-lima {
 	color: lime;
 }
+
+.verde-lima-hover:hover {
+
+	color: lime !important;
+
+}
 // .blanco-hover {
 
 .verde-lima:hover {
